TAG: nomenload-3-5-1-6
DATE: 09/25/2006
STAFF: lec
CHANGES: TR 7894;mgiconfig

TAG: nomenload-3-5-1-5
DATE: 09/22/2006
STAFF: lec
CHANGES: TR 7894;mgiconfig

TAG: nomenload-3-5-1-4
DATE: 09/21/2006
STAFF: lec
CHANGES: TR 7894;mgiconfig

TAG: nomenload-3-5-1-3
DATE: 09/21/2006
STAFF: lec
CHANGES: build 36

TAG: nomenload-3-5-1-2
DATE: 09/08/2006
STAFF: lec
CHANGES: build 36

TAG: nomenload-3-5-1-1
DATE: 09/06/2006
STAFF: lec
CHANGES: build 36; merge

TAG: nomenload-build36-5
DATE: 08/22/2006
STAFF: lec
CHANGES: build 36

TAG: nomenload-build36-4
DATE: 08/15/2006
STAFF: lec
CHANGES: build 36

TAG: nomenload-build36-3
DATE: 07/28/2006
STAFF: lec
CHANGES: build 36

TAG: nomenload-build36-2
DATE: 07/27/2006
STAFF: lec
CHANGES: build 36

TAG: nomenload-build36-BP
TAG: nomenload-build36-1
DATE: 07/17/2006
STAFF: lec
CHANGES: build 36

TAG: nomenload-build36-BP
DATE: 07/14/2006
STAFF: lec
CHANGES: branch point for build 36

TAG: nomenload-4-0-3
DATE: 01/13/2005
STAFF: lec
CHANGES: convert to MGI_Synonym

TAG: nomenload-4-0-2
DATE: 02/11/2004
STAFF: lec
CHANGES: remove dump commands

TAG: nomenload-4-0-1
DATE: 02/11/2004
STAFF: lec
CHANGES: JSAM; check for duplicate symbols

TAG: nomenload-4-0-0
DATE: 01/28/2004
STAFF: lec
CHANGES: JSAM

TAG: nomenload-3-0-1
DATE: 01/13/2004
STAFF: lec
CHANGES: TR 5327; nomen merge

TAG: nomenload-3-0-0
DATE: 12/30/2003
STAFF: lec
CHANGES: TR 5327; nomen merge

TAG: nomenload-2-0-0
DATE: 05/28/2003
STAFF: lec
CHANGES: added output file creation

TAG: nomenload-1-0-1
DATE: 10/21/2000
STAFF: lec
CHANGES: added db.useOneConnection()

TAG: nomenload-1-0-0
DATE: 08/14/2000
STAFF: lec