@@ -126,7 +126,8 @@ import loadlib
 #
 # from configuration file
 #
-passwordFileName = os.environ['MGI_DBPASSWORDFILE']
+user = os.environ['MGD_DBUSER']
+passwordFileName = os.environ['MGD_DBPASSWORDFILE']
 mode = os.environ['NOMENMODE']
 inputFileName = os.environ['NOMENDATAFILE']
 mappingFileName = os.environ['MAPPINGDATAFILE']
@@ -229,6 +230,8 @@ def init():
 	global startNomenKey, nomenKey, accKey, synKey, mgiKey, refAssocKey
  
 	db.useOneConnection(1)
+        db.set_sqlUser(user)
+        db.set_sqlPassword(passwordFileName)
  
 	fdate = mgi_utils.date('%m%d%Y')	# current date
 	head, tail = os.path.split(inputFileName) 
